# C-Model-to-TypeScript-Type

./: .gitignore  Cargo.toml  README.md
src/: main.rs
