[package]
name = "Csharp-to-Typescript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] } # Make sure the "json" feature is enabled
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
futures = "0.3"
dotenv = "0.15.0"
